<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_img2"
    tools:context=".Main.DetalleTransferencias.DetalleTranferencias">

    <LinearLayout
        android:id="@+id/content_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="9dp"
                android:layout_marginTop="2dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtFolio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:background="@color/acvwhite"
                    android:text="@string/T_folio_transferencia"
                    android:textColor="@color/acvblue"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtvDescripcion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/acvwhite"
                    android:text="@string/T_sucursal_origen"
                    android:textColor="@color/acvblack"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/acvwhite"
                    android:text="@string/T_total_articulos"
                    android:textColor="@color/acvorange"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/txtContados"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/acvwhite"
                    android:text="@string/T_contados"
                    android:textColor="@color/acvorange"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/observaciones"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/acvwhite"
                    android:text="@string/T_observaciones"
                    android:textColor="@color/acvblack"
                    android:textSize="11sp" />
            </LinearLayout>

            <Button
                android:id="@+id/txtvStatus"
                android:layout_width="125dp"
                android:layout_height="52dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="6dp"
                android:background="@drawable/boton_redondo"
                android:text="@string/T_finalizar"
                android:textColor="@color/acvwhite"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="120dp"
                android:orientation="vertical">
                <SearchView
                    android:id="@+id/srcBuscar"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/marco_orange"
                    android:iconifiedByDefault="false"
                    android:queryHint="Clave y/o descripción" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reciclerDetalle"
        android:layout_width="413dp"
        android:layout_height="613dp"
        android:layout_marginTop="185dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>