<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_articulos"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="40dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    tools:context=".Main.DetalleTransferencias.list_mov_alm_detalle">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:padding="6dp">
            <ImageView
                android:id="@+id/imvDocumento"
                android:layout_width="70dp"
                android:layout_height="90dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_gravity= "center"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                app:srcCompat="@drawable/entrega" />
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/imvDocumento"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txtClave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/DT_clave"
                    android:textColor="@color/acvblue"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/txtDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/DT_descripcion"
                    android:textColor="@color/acvblue"
                    android:textStyle="bold"
                    android:textSize="12sp"/>
                <TextView
                    android:id="@+id/txtCantidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/acvblack"
                    android:text="@string/DT_cantidad"
                    android:textSize="12sp"/>
                <!--<<TextView
                   android:id="@+id/txtCantidadEnviada"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textColor="@color/acvblack"
                   android:text="@string/DT_cantidadenviada"
                   android:textSize="15sp"/>
              TextView
                   android:id="@+id/txtMedida"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="Medida:"
                   android:textColor="@color/black"
                   android:textSize="15sp"/>-->
            </LinearLayout>

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="24dp"
                android:text="@string/DT_validada"
                android:textColor="@color/acvorange"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>